fix: increase contrast in dark skeleton colours

--- a/packages/pelagos/less/themes.less
+++ b/packages/pelagos/less/themes.less
@@ -464,7 +464,7 @@
 	--focus: @cyan-gray-20;
 	--focus-inset: @cyan-gray-100;
 	--focus-inverse: @cyan-60;
-	--skeleton-background: @cyan-gray-80-hover;
+	--skeleton-background: @cyan-gray-90-hover;
 	--skeleton-element: @cyan-gray-70;
 	--interactive: @cyan-50;
 	--highlight: @cyan-90;
@@ -646,7 +646,7 @@
 	--focus: @white;
 	--focus-inset: @gray-100;
 	--focus-inverse: @blue-60;
-	--skeleton-background: @gray-80-hover;
+	--skeleton-background: @gray-90-hover;
 	--skeleton-element: @gray-70;
 	--interactive: @blue-50;
 	--highlight: @blue-90;
